# scraping-lottery-results

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
config/static/js/: htmx.min.js
lotto_results/: apps.py  forms.py  views.py
lotto_results/tests/: test_apps.py  test_models.py  test_urls.py  test_views.py
templates/: base.html  index.html
