[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

# 3rd party
django = "^4.1.1"
python-decouple = "^3.6"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
django-htmx = "^1.13.0"
django-widget-tweaks = "^1.4.12"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ruff = "^0.0.185"
isort = "^5.10.1"
django-stubs = "^1.13.1"
mypy = "^0.991"
djlint = "^1.19.10"

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
namespace_packages = false
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "lotto_results.tests.*"
allow_untyped_defs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.mypy_django_plugin]
ignore_missing_model_attributes = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    '__init__.py',
    '.mypy_cache',
    '.pytest_cache',
    'venv',
    'migrations',
]
ignore = ['E402']
line-length = 88
select = [
    'E',
    'F',
    'W',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
